Fixed spell casting and GPL headers, comments
Fixed a bug in AbilityExecutor where spells would not be casted.
Updated GPL Headers and Improved comments for the ability class to show
what each field contains or is used for.

--- a/XI-Tools-Tests/XI-Tools-Tests.csproj
+++ b/XI-Tools-Tests/XI-Tools-Tests.csproj
@@ -72,7 +72,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="XIToolsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
